# RootBrowse

./: .gitignore  CHANGELOG.md  README.md  STATUS.md  article.md  pyproject.toml
.claude/: settings.local.json
docs/: PROJECT.md
rootbrowse/: README.md  __init__.py
rootbrowse/core/: __init__.py  _version.py  browser.py  operation.py  tab.py  view.py
rootbrowse/mcp/: server.py  tools.py
src/RootBrowse/: CHANGELOG.md  README.md  example.py  pyproject.toml
src/RootBrowse/src/rootbrowse/: _version.py  browser.py  constants.py  element_operator.py  page_scanner.py  tab_manager.py  types.py
src/RootBrowse/test/: conftest.py  test_browser.py  test_element_operator.py  test_page_scanner.py  test_tab_manager.py  test_types.py
src/RootBrowseMCP/: CHANGELOG.md  README.md  pyproject.toml
src/RootBrowseMCP/src/rootbrowse_mcp/: __init__.py  tools.py
