[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootbrowse"
version = "0.6.1"
description = "Python browser automation MCP framework for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "DrissionPage>=4.0.0",
    "mcp>=1.0.0",
]
authors = [
    { name = "zimvir" }
]
keywords = ["browser", "automation", "mcp", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/zimvir/RootBrowse"
Repository = "https://github.com/zimvir/RootBrowse"

[project.scripts]
rootbrowse-mcp = "rootbrowse.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rootbrowse", "rootbrowse.core", "rootbrowse.mcp"]