[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootbrowse-mcp"
version = "0.1.0"
description = "MCP server for RootBrowse browser automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rootbrowse>=0.2.0",
    "mcp>=1.0.0",
]

[project.scripts]
rootbrowse-mcp = "rootbrowse_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rootbrowse_mcp"]